Added a unit test flag for dynamic agent loading