@@ -31,6 +31,9 @@ android {
     composeOptions {
         kotlinCompilerExtensionVersion = "1.5.11"
     }
+    tasks.withType<Test> {
+        jvmArgs = listOf("-XX:+EnableDynamicAgentLoading")
+    }
 }
 
 dependencies {
